--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="card_text">Cruise</div>
                 <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
             </div>
-            
+
             <div class="card tram">
                 <img class="card_picture" src="./img/noun_Tram_3134750.png" alt="camper">
                 <div class="card_text">Tram</div>
@@ -98,7 +98,7 @@
 
         <!-- Site Footer -->
         <footer>
-
+            <h2>From Team Boolean</h2>
         </footer>
         <!-- /Site Footer -->
 
