--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@
             <div class="card baloon">
                 <img class="card_picture" src="./img/noun_air_balloon_3134741.png" alt="palloncino">
                 <div class="card_text">Air baloon</div>
-                <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
+                <div class="card_back"></div>
             </div>
 
             <div class="card tractor">
                 <img class="card_picture" src="./img/noun_Tractor_3134797.png" alt="trattore">
                 <div class="card_text">Tractor</div>
-                <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
+                <div class="card_back"></div>
             </div>
 
             <div class="card bicycle">
                 <img class="card_picture" src="./img/noun_Bicycle_3134821.png" alt="bici">
                 <div class="card_text">Bicycle</div>
-                <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
+                <div class="card_back"></div>
             </div>
 
             <div class="card cruise">
                 <img class="card_picture" src="./img/noun_Cruise_Ship_3134824.png" alt="crociera">
                 <div class="card_text">Cruise</div>
-                <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
+                <div class="card_back"></div>
             </div>
 
             <div class="card submarine">
                 <img class="card_picture" src="./img/noun_Submarine_3134738.png" alt="sottomarino">
                 <div class="card_text">Submarine</div>
-                <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
+                <div class="card_back"></div>
             </div>
 
             <div class="card baloon">
@@ -61,38 +61,39 @@
             <div class="card tram">
                 <img class="card_picture" src="./img/noun_Tram_3134750.png" alt="camper">
                 <div class="card_text">Tram</div>
-                <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
+                <div class="card_back"></div>
             </div>
 
             <div class="card submarine">
                 <img class="card_picture" src="./img/noun_Submarine_3134738.png" alt="sottomarino">
                 <div class="card_text">Submarine</div>
-                <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
+                <div class="card_back"></div>
             </div>
 
             <div class="card tractor">
                 <img class="card_picture" src="./img/noun_Tractor_3134797.png" alt="trattore">
                 <div class="card_text">Tractor</div>
-                <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
+                <div class="card_back"></div>
             </div>
 
             <div class="card bicycle">
                 <img class="card_picture" src="./img/noun_Bicycle_3134821.png" alt="bici">
                 <div class="card_text">Bicycle</div>
-                <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
+                <div class="card_back"></div>
             </div>
 
             <div class="card cruise">
                 <img class="card_picture" src="./img/noun_Cruise_Ship_3134824.png" alt="crociera">
                 <div class="card_text">Cruise</div>
-                <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
+                <div class="card_back"></div>
             </div>
 
             <div class="card tram">
                 <img class="card_picture" src="./img/noun_Tram_3134750.png" alt="camper">
                 <div class="card_text">Tram</div>
-                <img class="card_back" src="./img/pattern.png" alt="sfonto retro carte">
+                <div class="card_back"></div>
             </div>
+
         </main>
         <!-- /Card Content -->
 
